export class AccountType {
    constructor(public id: number, public name: string) {}
}
